--- a/Board/src/main/resources/application.properties
+++ b/Board/src/main/resources/application.properties
@@ -12,3 +12,12 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/madangdb
 spring.datasource.username=madang
 spring.datasource.password=madang
+
+## java mail sender setting
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=seeyouspace0@gmail.com
+spring.mail.password=icoqoasqlznwggmv
+#nfausqdpddirrznb
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
